# CVTDynoDataCollection

./: CMakeLists.txt  LICENSE
main/: CMakeLists.txt  Kconfig.projbuild  receiver.c  sender.c
